another routing fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         collaborations and offers />
     </div>
     <div class="brand">
-        <a href="/portfolio/home">☀</a>
+        <a [routerLink]="['/home']">☀</a>
     </div>
     <div class="header-txt">
         Folio
