--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <nav id="nav">
         <ul class="nav-list" id="nav-list">
             <li class="nav-item" id="nav-item-work">
-                <a href="/portfolio/works" class="nav-link">
+                <a [routerLink]="['/works']" class="nav-link">
                     <div class="nav-item-number">01</div>
                     <div class="nav-item-title">Works</div>
                 </a>
@@ -19,7 +19,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="/portfolio/about" class="nav-link">
+                <a [routerLink]="['/about']" class="nav-link">
                     <div class="nav-item-number">02</div>
                     <div class="nav-item-title">About</div>
                 </a>
@@ -36,7 +36,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="/portfolio/playground" class="nav-link">
+                <a [routerLink]="['/playground']" class="nav-link">
                     <div class="nav-item-number">03</div>
                     <div class="nav-item-title">Playground</div>
                 </a>
@@ -58,7 +58,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="/portfolio/contact" class="nav-link">
+                <a [routerLink]="['/contact']" class="nav-link">
                     <div class="nav-item-number">04</div>
                     <div class="nav-item-title">Contact</div>
                 </a>
