home image replace

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       <app-navbar></app-navbar>
     </nav>
     <div class="image">
-      <img loading="lazy" src="../../assets/img/home-girl.gif" class="img"/>
+      <img loading="lazy" src="../../assets/img/main-pfp.png" class="img"/>
     </div>
     <p class="footer">just an ordinary designer</p>
   </div>
