--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -59,10 +59,11 @@ nav {
 .image {
   display: flex;
   justify-content: center;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3%;  
   width: 25%;
   max-width: 100%;
-  margin-top: 10%;
-  bottom: 0;
 }
 
 
