--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,29 +1,48 @@
 header {
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 30px 0;
 }
 
-header > * {
-    width: 13%;
-}
 
 .header-txt {
+    margin: 0px 50px;
     color: #000;
+    text-align: right;
+    font: 400 14px Inter, sans-serif;
+}
+
+.brand {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;   
+}
+
+.brand a {
+    color: black;
+    text-decoration: none;
+}
+
+.white-header-txt {
+    margin: 0px 50px;
+    color: #EBEBEB;
     text-align: right;
     font: 400 14px Inter, sans-serif;
     margin-right: 20px;
 }
 
-.brand {
-    font-size: 30px;
+.white-brand {
+    color: #EBEBEB;
+    position: absolute;
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
-
+    font-size: 30px;
 }
 
-.brand a {
-    color: black;
+.white-brand a {
+    color: #EBEBEB;
     text-decoration: none;
 }
