--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,24 +28,24 @@
                 <div class="contact-info-section">
                     <p class="contact-info-section-title">Social</p>
                     <div class="contact-info-section-info">
-                        <p class="contact-info-section-info-txt"><a href="https://www.linkedin.com/in/sol-andrade/">Linkedin</a></p>
+                        <p class="contact-info-section-info-txt"><a href="https://www.linkedin.com/in/sol-andrade/" target="_blank">Linkedin</a></p>
                     </div>
                 </div>
                 <div class="contact-info-section">
                     <p class="contact-info-section-title">Email</p>
                     <div class="contact-info-section-info">
-                        <p class="contact-info-section-info-txt">solnicandrade@gmail.com</p>
+                        <p class="contact-info-section-info-txt"><a href="mailto:solnicandrade@gmail.com">solnicandrade@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-info-section">
                     <p class="contact-info-section-title">Code</p>
                     <div class="contact-info-section-info">
-                        <p class="contact-info-section-info-txt"><a href="https://github.com/SolAndrade">Github</a></p>
+                        <p class="contact-info-section-info-txt"><a href="https://github.com/SolAndrade" target="_blank">Github</a></p>
                     </div>
                 </div>
             </div>
             <div class="image">
-                <img loading="lazy" src="../../assets/img/home-girl.gif" class="img"/>
+                <img loading="lazy" [src]="contactGif" class="img"/>
             </div>
         </div>
     </div>
