--- a/src/app/my-works/project/project.component.html
+++ b/src/app/my-works/project/project.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="project-description" *ngIf="projectRoleDescriptionTxt">
           <p>
-            <img src="../../../assets/img/init-dot.png" alt="init-dot">
+            <img [src]="initDot" alt="init-dot">
             {{ project.projectRoleDescription }}
           </p>
         </div>
