about me contact button fix

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -64,7 +64,7 @@
                 <div class="contact-content" [routerLink]="['/contact']">
                     <p>let's create <span class="f-secondary">together</span> :)</p>
                     <div class="contact-button">
-                        <p>contact me</p>
+                        contact me
                         <!--<img [src]="arrowDiagonal" alt="arrow-diagonal">-->
                     </div>
                 </div>
