--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,13 +34,13 @@ nav {
 .title {
   gap: 20px;
   display: flex;
-  margin-top: 3%;
+  margin-top: 2%;
   
   .txt-my {
     color: #000;
     text-align: center;
     letter-spacing: -9px;
-    font: 400 140px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
+    font: 400 200px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
       sans-serif;
   }
   
@@ -51,21 +51,22 @@ nav {
     letter-spacing: -4.8px;
     white-space: nowrap;
     margin: auto 0;
-    font: 400 120px Inter, sans-serif;
+    font: 400 180px Inter, sans-serif;
   }
 }
-
 
 .image {
   display: flex;
   justify-content: center;
   position: absolute;
   bottom: 0;
-  margin-bottom: 3%;  
-  width: 25%;
-  max-width: 100%;
+  margin-bottom: 3%;
 }
 
+.image img {
+  width: 450px;
+  height: auto;
+}
 
 .footer {
   width: 100%;
