--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -24,12 +24,17 @@
             <app-navbar></app-navbar>
         </nav>
         <div class="info">
-            <p>
-                Step into my creative haven, where I showcase an eclectic mix of designs, explorations, discarded concepts, and everything that hasn't found its spotlight elsewhere. This is my playground, a glimpse into the diverse array of creations that make up my personal collection.
+            <p class="info-intro">
+                Step into my creative haven, where I showcase an eclectic mix of designs, explorations, discarded
+                concepts, and everything that hasn't found its spotlight elsewhere. This is my playground, a glimpse
+                into the diverse array of creations that make up my personal collection.
             </p>
         </div>
         <p class="fix">I'm currently working on this section, visit me again soon!</p>
         <p class="footer">just an ordinary designer</p>
+        <!--<div class="image">
+                <img [src]="img" alt="img">
+            </div>-->
     </div>
 </body>
 
